--- a/.github/workflows/build-and-publish.yml
+++ b/.github/workflows/build-and-publish.yml
@@ -10,8 +10,7 @@ env:
   ITCHIO_USERNAME: thewarlock
   GAME_NAME: delay-discovery
   PROJECT_PATH: "./src/"
-  GODOT_VERSION: 4.3
-
+  GODOT_VERSION: 4.3-stable
 jobs:
   export-game:
     name: Export game
@@ -23,8 +22,8 @@ jobs:
         id: export
         uses: firebelley/godot-export@v6.0.0
         with:
-          godot_executable_download_url: https://downloads.tuxfamily.org/godotengine/${{env.GODOT_VERSION}}/Godot_v${{env.GODOT_VERSION}}-stable_linux.x86_64.zip
-          godot_export_templates_download_url: https://downloads.tuxfamily.org/godotengine/${{env.GODOT_VERSION}}/Godot_v${{env.GODOT_VERSION}}-stable_export_templates.tpz
+          godot_executable_download_url: https://github.com/godotengine/godot-builds/releases/download/${{env.GODOT_VERSION}}/Godot_v${{env.GODOT_VERSION}}_linux.x86_64.zip
+          godot_export_templates_download_url: https://github.com/godotengine/godot-builds/releases/download/${{env.GODOT_VERSION}}/Godot_v${{env.GODOT_VERSION}}_export_templates.tpz
           relative_project_path: ${{ env.PROJECT_PATH}}
           use_preset_export_path: true
       - name: Upload Windows Artifact
