--- a/.github/workflows/build-and-publish.yml
+++ b/.github/workflows/build-and-publish.yml
@@ -14,17 +14,39 @@ env:
 
 jobs:
   export-game:
+    name: Export game
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
         uses: actions/checkout@v4
-      - name: Export Game
-        uses: ./github/workflows/export-game.yml
+      - name: Export
+        id: export
+        uses: firebelley/godot-export@v6.0.0
         with:
-          game_name: ${{ env.GAME_NAME }}
-          project_path: ${{ env.PROJECT_PATH }}
-          godot_version: ${{ env.GODOT_VERSION }}
-          platforms: web
+          godot_executable_download_url: https://github.com/godotengine/godot-builds/releases/download/${{env.GODOT_VERSION}}/Godot_v${{env.GODOT_VERSION}}_linux.x86_64.zip
+          godot_export_templates_download_url: https://github.com/godotengine/godot-builds/releases/download/${{env.GODOT_VERSION}}/Godot_v${{env.GODOT_VERSION}}_export_templates.tpz
+          relative_project_path: ${{ env.PROJECT_PATH}}
+          use_preset_export_path: true
+      - name: Upload Windows Artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: ${{ env.GAME_NAME }}.${{ github.ref_name }}.windows
+          path: ${{ steps.export.outputs.build_directory }}/Windows Desktop
+      - name: Upload MacOS Artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: ${{ env.GAME_NAME }}.${{ github.ref_name }}.mac
+          path: ${{ steps.export.outputs.build_directory }}/macOS
+      - name: Upload Linux Artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: ${{ env.GAME_NAME }}.${{ github.ref_name }}.linux
+          path: ${{ steps.export.outputs.build_directory }}/LinuxX11
+      - name: Upload Web Artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: ${{ env.GAME_NAME }}.${{ github.ref_name }}.web
+          path: ${{ steps.export.outputs.build_directory }}/Web
 
   itch-io-upload:
     name: Upload to Itch.io
